Fixed Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,6 @@ body {
 #showcase h1 {
     font-size: 60px;
     margin: 0;
-    padding-bottom: 20px;
     font-variant: small-caps;
 }
 
@@ -233,6 +232,7 @@ body {
     text-transform: uppercase;
     position: relative;
     top: -30px;
+    padding-bottom: 10px;
 }
 
 #banner .row {
